# skillcurrent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_LICENSE  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
ai_working/: REBUILD_RUNBOOK.md  build-history.md  feedback-triage-2026-07-17-sol.md  open-source-prep-plan.md  release-1.0-backlog.md
docs/: API.md  ARCHITECTURE.md  DATA_DICTIONARY.md  ELOUNDOU_EXPOSURE.md  INGESTION_RUNBOOK.md  MICROSOFT_AI_APPLICABILITY.md  PRD-v1.1.md  PUBLISHING.md  REBUILD_RUNBOOK.md  SEED_DATASET.md  SETUP.md  STATIC_SITE.md  TOOLCHAIN.md  data-sources.md  data-sources.md.txt  documentation.md  domain-model.md  fr1-hierarchy.md  fr8-role-evolution.md  security.md  testing.md
scripts/: check_docs.py  dev.ps1  (+1 more)
src/backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
src/backend/app/: main.py
src/backend/app/api/v1/: admin.py  au_occupations.py  bearings.py  companies.py  composite_sector.py  datasets.py  drift.py  gdpval.py  occupations.py  pipeline.py  router.py  schemas.py  search.py  sector_priorities.py  sectors.py  soc_groups.py  task_matrix.py
src/backend/app/core/: config.py  correlation.py
src/backend/app/middleware/: timing.py
src/backend/app/models/: __init__.py  aei.py  asc.py  drift.py  eloundou.py  eloundou_dwa.py  infrastructure.py  jsa.py  microsoft_ai.py  onet.py  osca.py  signal_source.py  snapshots.py  tier1.py
src/backend/app/services/: aei_ingestion.py  aei_temporal_ingestion.py  asc_ingestion.py  compute_au_task_layer.py  compute_us_au_divergence.py  drift_calculation.py  dwa_asc_bridge.py  eloundou_dwa_derivation.py  eloundou_ingestion.py  embedding_service.py  gdpval_ingestion.py  industry_profiles.py  jsa_ingestion.py  microsoft_ai_ingestion.py  oews_ingestion.py  onet_ingestion.py  osca_apportionment.py  osca_ingestion.py  pipeline_scheduler.py  signal_registry.py  snapshot_capture.py  transformations.py
src/backend/app/utils/: hashing.py
src/backend/data/gdpval_evaluations/: README.md  _TEMPLATE.csv
src/backend/data/seed/: abs_census_subdivision_occ.parquet  abs_census_w13.parquet  abs_census_wpp.parquet  abs_employment.parquet  abs_employment_osca.parquet  aei_job_exposure.parquet  aei_task_penetration.parquet  aei_task_snapshots.parquet  anzsco_soc_concordance.parquet  anzsic_subdivisions.parquet  asc_core_competency.parquet  asc_specialist_task.parquet  asc_technology_tool.parquet  au_occupation_exposure.parquet  au_task.parquet  dwa_asc_bridge.parquet  eloundou_dwa_scores.parquet  eloundou_occ_scores.parquet  exposure_snapshots.parquet  gdpval_rubric_items.parquet  gdpval_tasks.parquet  gptval_benchmarks.parquet  industry_crosswalk.parquet  industry_occupation_profiles.parquet  jsa_genai_exposure.parquet  manifest.json  ms_ai_applicability_scores.parquet  ms_ai_iwa_metrics.parquet  ms_ai_physical_tasks.parquet  ms_ai_soc_metrics.parquet  ms_ai_soc_to_iwas.parquet  oews_employment.parquet  onet_alternate_titles.parquet  onet_dwa_references.parquet  onet_emerging_tasks.parquet  onet_occupations.parquet  onet_sample_titles.parquet  onet_task_statements.parquet  onet_tasks_to_dwas.parquet  osca_anzsco_map.parquet  (+5 more)
src/backend/data/signal_sources/: README.md  signals.csv
src/backend/data/static/: neighbours.json
src/backend/migrations/: env.py
src/backend/migrations/versions/: 001_foundational_tables.py  002_fr8_aei_and_industry_tables.py  003_infrastructure_and_onet_details.py  004_microsoft_working_with_ai.py  005_eloundou_occ_scores.py  006_aei_labor_market_impacts.py  007_add_task_pct_to_aei_snapshots.py  008_eloundou_dwa_scores.py  009_task_drift_metrics.py  010_extend_industry_profiles.py  011_enable_pg_trgm_for_search.py  012_add_embedding_columns.py  013_gdpval_benchmark_tasks.py  014_au_employment_integration.py  015_api_request_logging.py  016_add_request_id_to_api_request_log.py  017_gptval_benchmarks.py  018_abs_census_wpp.py  019_abs_census_w13.py  020_anzsic_subdivisions.py  021_abs_census_subdivision_occ.py  022_add_indp_level_to_census_subdivision.py  023_osca_backbone.py  024_abs_employment_osca.py  025_asc_layers.py  026_dwa_asc_bridge.py  027_au_task_layer.py  028_us_au_divergence.py  029_drop_oews_onet_fk.py  030_drop_iop_onet_fk.py  031_add_pipeline_run_id_to_transformation_log.py  032_signal_source_registry.py  033_backfill_aei_snapshot_onet_soc_codes.py  034_exposure_snapshots.py  035_jsa_genai_exposure.py
src/backend/scripts/: build_anzsco_concordance.py  build_dwa_asc_bridge.py  build_occ_neighbours.py  build_seed.py  build_static_site.py  capture_snapshot.py  check_content_drift.py  check_redistribution.py  compute_au_task_layer.py  compute_drift.py  compute_gdpval_waterline.py  compute_industry_profiles.py  compute_osca_employment.py  compute_us_au_divergence.py  cross_dataset_insights.py  derive_eloundou_dwas.py  doctor.py  embed_titles.py  generate_companies_api.py  ingest_abs.py  ingest_abs_census_w13.py  ingest_abs_census_wpp.py  ingest_aei.py  ingest_aei_temporal.py  ingest_anzsic_subdivisions.py  ingest_asc.py  ingest_asx_companies.py  ingest_census_subdivision_occ.py  ingest_crosswalk.py  ingest_eloundou.py  ingest_epoch_eci.py  ingest_gdpval.py  ingest_gdpval_evaluations.py  ingest_jsa_genai.py  ingest_microsoft_ai.py  ingest_oews.py  ingest_onet.py  ingest_osca.py  ingest_signal_sources.py  restore_seed.py  (+3 more)
src/backend/tests/: conftest.py  test_aei_onet_soc_backfill.py  test_api.py  test_au_classification.py  test_au_occupations.py  test_bearings.py  test_cross_dataset_joins.py  test_data_invariants.py  test_drift.py  test_drift_families.py  test_drift_results.py  test_fr9_asc.py  test_fr9_au_task.py  test_fr9_divergence.py  test_fr9_dwa_bridge.py  test_fr9_osca_apportionment.py  test_fr9_osca_backbone.py  test_jsa_genai.py  test_onet_ingestion.py  test_performance.py  test_pipeline.py  test_signal_coverage.py  test_snapshots.py  test_transformations.py
(+136 files in other folders)
