[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "workforce-ai-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pgvector>=0.3",
    "sentence-transformers>=2.2",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "pyreadr>=0.5",
    "scipy>=1.12",
    "openpyxl>=3.1",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
strict = true
python_version = "3.12"

# Third-party libraries without type stubs. Declared here so both the local
# venv (where they are installed but untyped) and the pre-commit mypy hook
# (isolated env, where they are absent) agree — avoids env-divergent per-line
# ignores. sentence-transformers, pyreadr, pyarrow, openpyxl ship no py.typed.
[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "pyreadr.*",
    "pyarrow.*",
    "openpyxl.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: performance baseline tests requiring a warm DB (run with -m slow)",
    "llm: tests that call the Anthropic API (Haiku, ~$0.001/call)",
]
