[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "skillcurrent-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pgvector>=0.3",
    "sentence-transformers>=2.2",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "pyreadr>=0.5",
    "scipy>=1.12",
    "openpyxl>=3.1",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    # black and ruff are PINNED to match .pre-commit-config.yaml exactly.
    # The pre-commit hooks are the formatting source of truth; a `>=` floor here
    # would let a fresh install pull a newer version that formats some constructs
    # differently, so `python -m black --check` would disagree with the commit gate.
    # If you bump these, bump the `rev:` in .pre-commit-config.yaml in lockstep.
    "black==24.10.0",
    "ruff==0.8.6",
    "mypy>=1.8",
]

# FORMATTER POLICY: black is the sole formatter; ruff is linter-only (no ruff-format hook —
# see .pre-commit-config.yaml). Keep line-length=100 / py312 here == root ruff.toml == the hook
# revs, and the [dev] black/ruff pins == those revs, so local `python -m black` == CI.
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
# Alembic migrations are generated, append-only history — black-formatted but NOT
# linted (don't re-churn old migrations when lint rules change). force-exclude so
# pre-commit's explicit file list honours the exclude.
extend-exclude = ["migrations"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "C90"]
# black is the sole formatter and owns line length — don't have the linter
# re-flag the long lines (SQL/strings/signatures) black deliberately leaves.
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# C901 complexity is enforced on app/ business logic. One-shot ingest/CLI
# scripts are procedural (branchy CSV/format parsing) and exempt.
"scripts/**" = ["C901"]

[tool.mypy]
strict = true
python_version = "3.12"

# Third-party libraries without type stubs. Declared here so both the local
# venv (where they are installed but untyped) and the pre-commit mypy hook
# (isolated env, where they are absent) agree — avoids env-divergent per-line
# ignores. sentence-transformers, pyreadr, pyarrow, openpyxl ship no py.typed.
[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "pyreadr.*",
    "pyarrow.*",
    "openpyxl.*",
    "pandas.*",
    "scipy.*",
    "apscheduler.*",
    "numpy.*",
    "anthropic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: performance baseline tests requiring a warm DB (run with -m slow)",
    "llm: tests that call the Anthropic API (Haiku, ~$0.001/call)",
]
